[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "antigravity-cli"
version = "0.1.0"
description = "Local CLI for Antigravity sessions, chat, and web UI"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12,<1",
]

[project.scripts]
ag = "ag_cli:main"
ag-cli = "ag_cli:main"
antigravity-cli = "ag_cli:main"

[tool.setuptools]
packages = ["runtime_cli"]
py-modules = ["ag_cli", "store", "ui"]
script-files = ["ag"]
